--- a/UsedWebView/app/src/main/AndroidManifest.xml
+++ b/UsedWebView/app/src/main/AndroidManifest.xml
@@ -27,7 +27,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.UsedWebView">
+        android:theme="@style/Theme.UsedWebView"
+        android:usesCleartextTraffic="true"
+        >
         <meta-data
             android:name="com.google.android.actions"
             android:resource="@xml/file_paths" />
